--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -49,6 +49,18 @@
     </div>
 
     {% include footer.html %}
+    
+    <script>
+      if (window.netlifyIdentity) {
+        window.netlifyIdentity.on("init", user => {
+          if (!user) {
+            window.netlifyIdentity.on("login", () => {
+              document.location.href = "/admin/";
+            });
+          }
+        });
+      }
+    </script>
 
 </body>
 
