--- a/_sass/libs/_vars.scss
+++ b/_sass/libs/_vars.scss
@@ -30,7 +30,7 @@
 
 // Palette.
 	$palette: (
-		bg:					#e31ba0,
+		bg:					#242943,
 		bg-alt:				#2a2f4a,
 		fg:					#ffffff,
 		fg-bold:			#ffffff,
